[package]
name = "gravity_ball"
version = "0.1.0"
authors = ["Bennett J. Bremer <bennettjamesbremer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14"
ndarray-linalg = { version = "0.12", features = ["openblas"] }
sdl2 = "0.34.2"
